# mem0-rust

./: Cargo.toml  README.md
docs/: PHASED_IMPLEMENTATION_PLAN.md
examples/: async_openai.rs  basic_usage.rs  custom_config.rs  deletion.rs  error_handling.rs  metadata_filtering.rs  multiple_clients.rs  scored_results.rs
src/: config.rs  embedder.rs  errors.rs  lib.rs  memory.rs  models.rs  python.rs  store.rs
src/embeddings/: huggingface.rs  mod.rs  ollama.rs
src/graph/: memory.rs  mod.rs  models.rs  traits.rs
src/history/: sqlite.rs
src/llms/: ollama.rs  openai.rs
src/memory/: manager.rs
src/utils/: mod.rs  retry.rs
src/vector_stores/: conformance.rs  memory.rs  mod.rs  postgres.rs  qdrant.rs
