[package]
name = "mem0-rust"
version = "0.1.0"
edition = "2021"
authors = ["OpenAI Assistant"]
description = "Rust reimplementation of the mem0 memory client"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
